--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -3,5 +3,14 @@
     "Lucida Sans", Arial, sans-serif;
 }
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
+}
+/* input[type="number"] {
+  -moz-appearance: textfield;
+} */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
